# bevy_asepritesheet

./: Cargo.toml  LICENSE  readme.md  uuidgen.sh
assets/: test.sprite.json  witch.aseprite  witch.json  witch.sprite.json
examples/: character.rs  simple.rs
src/: animator.rs  aseprite_data.rs  asset_plugin.rs  assets.rs  core.rs  lib.rs  main.rs  sprite.rs  sprite_animator.rs
