[package]
name = "bevy_asepritesheet"
version = "0.4.0"
edition = "2021"
authors = ["Isaiah Smith <tteck02@gmail.com>"]
description = "Allows use of exported asetprite sprite sheets in bevy"
homepage = "https://technostalgic.tech/"
repository = "https://gitlab.com/Technostalgic/bevy_asepritesheet"
categories = ["game-development"]
readme = "readme.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
bevy = "0.12"
serde_json = "1"
serde = "1"